# Barta

./: .env.example  .gitignore  Makefile  PROJECT_SUMMARY.md  README.md  alembic.ini  demo_mmr.py  demo_retrieval.py  docker-compose.yml  pyproject.toml  requirements.txt  test-acceptance.sh  test_retrieval.py
apps/api/: main.py
apps/api/core/: config.py  db.py
apps/api/memory/: store.py  summarize.py
apps/api/retrieval/: mmr.py  rerank.py  retrieve.py
apps/api/routes/: chat.py  health.py  metrics.py  search.py
apps/api/shared/: embedding.py  llm.py
apps/api/shared/prompts/: answer.txt
apps/ingest/: embedder.py  utils.py  worker.py
apps/web/: next.config.js  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: layout.tsx  page.tsx
apps/web/app/api/ask/: route.ts
apps/web/components/: Chat.tsx
infra/docker/: api.Dockerfile  web.Dockerfile
infra/migrations/: env.py
infra/migrations/versions/: 001_add_ingestion_tables.py  002_backfill_tsv.py  003_update_vector_dimensions.py
tests/: test_chat_fallback.py  test_health.py  test_ingest_stub.py  test_memory.py  test_retrieve.py
