[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "barta"
version = "1.0.0"
description = "AI News Assistant"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "alembic>=1.12.0",
    "redis>=5.0.0",
    "prometheus-client>=0.17.0",
    "pydantic-settings>=2.0.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"